<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/threeHundred_custom"
            android:layout_marginStart="@dimen/standard"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/min_standard"
            android:layout_marginTop="@dimen/hundred"
            android:text="@string/title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            android:layout_marginStart="@dimen/min_standard"
            android:layout_marginEnd="@dimen/standard"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/title_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_textview"
            app:layout_constraintTop_toTopOf="@+id/title_textview" />

        <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_standard"
            android:text="@string/release_date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/title_textview"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/release_date_text"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            android:layout_marginStart="@dimen/min_standard"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/release_date_textview"
            app:layout_constraintEnd_toEndOf="@+id/title_text"
            app:layout_constraintStart_toEndOf="@+id/release_date_textview"
            app:layout_constraintTop_toTopOf="@+id/release_date_textview" />

        <TextView
            android:id="@+id/vote_avg_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_standard"
            android:text="@string/vote_average"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/release_date_textview"
            app:layout_constraintTop_toBottomOf="@+id/release_date_text" />

        <TextView
            android:id="@+id/vote_avg_text"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            android:layout_marginStart="@dimen/min_standard"
            app:layout_constraintBottom_toBottomOf="@+id/vote_avg_textview"
            app:layout_constraintEnd_toEndOf="@+id/release_date_text"
            app:layout_constraintStart_toEndOf="@+id/vote_avg_textview"
            app:layout_constraintTop_toTopOf="@+id/vote_avg_textview" />

        <TextView
            android:id="@+id/synopsis_text"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard"
            android:layout_marginTop="@dimen/min_standard"
            android:layout_marginEnd="@dimen/standard"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/trailer_textview"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_standard"
            android:drawablePadding="@dimen/min_standard"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size"
            app:layout_constraintEnd_toEndOf="@+id/synopsis_text"
            app:layout_constraintStart_toStartOf="@+id/synopsis_text"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_text" />

        <TextView
            android:id="@+id/review_textview"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_standard"
            android:layout_marginBottom="@dimen/standard"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/trailer_textview"
            app:layout_constraintStart_toStartOf="@+id/trailer_textview"
            app:layout_constraintTop_toBottomOf="@+id/trailer_textview" />

        <ImageView
            android:id="@+id/favourite_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/synopsis_text"
            app:layout_constraintEnd_toEndOf="@+id/vote_avg_text"
            app:srcCompat="@drawable/ic_favorite_border"
            android:contentDescription="@string/fav_icon_content_desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>